// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar image should render responsive css with an image 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  text-align: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: sizeIcon30;
  height: sizeIcon30;
  background-color: colorBackgroundUser;
  color: colorTextUser;
  border-radius: borderRadiusCircle;
}

@media screen and (min-width: 40em) {
  .emotion-0 {
    width: sizeIcon40;
    height: sizeIcon40;
  }
}

@media screen and (min-width: 52em) {
  .emotion-0 {
    width: sizeIcon90;
    height: sizeIcon90;
  }
}

.emotion-1 {
  box-sizing: border-box;
  max-width: 100%;
  width: sizeIcon30;
  height: sizeIcon30;
}

@media screen and (min-width: 40em) {
  .emotion-1 {
    width: sizeIcon40;
    height: sizeIcon40;
  }
}

@media screen and (min-width: 52em) {
  .emotion-1 {
    width: sizeIcon90;
    height: sizeIcon90;
  }
}

<div
    class="emotion-0"
    data-paste-core-version="19.0.1"
    data-paste-element="AVATAR"
  >
    <img
      alt="avatar example"
      class="emotion-1"
      data-paste-core-version="19.0.1"
      data-paste-element="BOX"
      src="/avatars/avatar2.png"
      title="avatar example"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar intials should render responsive css 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  text-align: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: sizeIcon10;
  height: sizeIcon10;
  box-shadow: shadowBorderUser;
  background-color: colorBackgroundUser;
  color: colorTextUser;
  border-radius: borderRadiusCircle;
}

@media screen and (min-width: 40em) {
  .emotion-0 {
    width: sizeIcon60;
    height: sizeIcon60;
  }
}

@media screen and (min-width: 52em) {
  .emotion-0 {
    width: sizeIcon100;
    height: sizeIcon100;
  }
}

.emotion-1 {
  margin: 0;
  padding: 0;
  color: inherit;
  font-size: fontSize10;
  line-height: lineHeight10;
  display: inline-block;
  font-weight: fontWeightSemibold;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (min-width: 40em) {
  .emotion-1 {
    font-size: fontSize10;
    line-height: lineHeight60;
  }
}

@media screen and (min-width: 52em) {
  .emotion-1 {
    font-size: fontSize60;
    line-height: lineHeight100;
  }
}

<div
    class="emotion-0"
    data-paste-core-version="19.0.1"
    data-paste-element="AVATAR"
  >
    <abbr
      class="emotion-1"
      data-paste-core-version="19.0.1"
      data-paste-element="TEXT"
      title="Simon Taggart"
    >
      ST
    </abbr>
  </div>
</DocumentFragment>
`;
